--- a/app/lang/zh-CN.json
+++ b/app/lang/zh-CN.json
@@ -4,7 +4,7 @@
   "%@ cannot be attached because it is larger than 25MB.": "%@因为大于25MB所以无法附加。",
   "%@ has been installed and enabled. No need to restart! If you don't see the plugin loaded, check the console for errors.": "%@已安装并启用。无需重启！如果您没有看到加载的插件，请检查控制台是否有错误。",
   "%@ is a directory. Try compressing it and attaching it again.": "%@是一个目录。尝试压缩它并再次连接。",
-  "%@ messages in this thread are hidden because it was moved to trash or spam.": "此会话中的 %@ 封邮件被隐藏，因为它被移动到回收站或垃圾邮件。",
+  "%@ messages in this thread are hidden because it was moved to trash or spam.": "此会话中的 %@ 封邮件被隐藏，因为它已经被移动到回收站或垃圾邮件。",
   "%@ others": "%@其他人",
   "%@ recently %@ %@": "%@最近%@%@",
   "(No Recipients)": "（无收件人）",
@@ -39,9 +39,9 @@
   "All Contact Previews Used": "使用的所有联系人预览",
   "All Mail": "所有邮件",
   "All Reminders Used": "使用的所有提醒",
-  "All Scheduled Sends Used": "使用的所有预定发送",
-  "All Sharing Links Used": "使用所有共享链接",
-  "All Snoozes Used": "所有使用的贪睡",
+  "All Scheduled Sends Used": "所有使用定时发送",
+  "All Sharing Links Used": "所有共享链接",
+  "All Snoozes Used": "所有稍后提醒",
   "All used up!": "全部用光了！",
   "Allow insecure SSL": "允许不安全的SSL",
   "Always show images from %@": "始终显示%@的图像",
@@ -176,7 +176,7 @@
   "Deselect all conversations": "取消选择所有会话",
   "Developer": "开发人员",
   "Disable": "禁用",
-  "Dismiss": "解雇",
+  "Dismiss": "忽略",
   "Display conversations in descending chronological order": "按时间降序顺序显示对话",
   "Display thumbnail previews for attachments when available.": "显示附件的缩略图预览（如果有）。（仅限macOS）",
   "Do you prefer a single panel layout (like Gmail) or a two panel layout?": "您更喜欢单面板布局（如Gmail）还是双面板布局？",
@@ -198,8 +198,8 @@
   "Edit custom shortcuts": "编辑自定义快捷键",
   "Email": "邮件",
   "Email Address": "电子邮件地址",
-  "Empty": "空",
-  "Empty %@ now": "空%@现在",
+  "Empty": "清空",
+  "Empty %@ now": "立即清空%@",
   "Enable": "开启",
   "Enable read receipts %@ or link tracking %@ to see notifications here.": "启用阅读回执%@或链接跟踪%@在此处查看通知。",
   "Enable verbose IMAP / SMTP logging": "启用详细的IMAP / SMTP日志记录",
