fix "an email address" and "an email subject" ukrainian translation

--- a/app/lang/uk.json
+++ b/app/lang/uk.json
@@ -869,8 +869,8 @@
   "Your name": "Твоє ім'я",
   "Your updated localization will be reviewed and included in a future version of Mailspring.": "Ваша оновлення ​​локалізації будуть розглянуті і включені в майбутню версію Mailspring.",
   "Zoom": "Збільшити",
-  "an email address": "електронна адреса",
-  "an email subject": "тема електронної листа",
+  "an email address": "адреса електронної пошти",
+  "an email subject": "тема електронного листа",
   "and": "і",
   "annual": "щорічний",
   "attachments": "вкладення",
