--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -17,6 +17,7 @@
   "About Mailspring": "Über Mailspring",
   "Accept": "Annehmen",
   "Account": "Konto",
+  "Account Color": "Kontofarbe",
   "Account Details": "Accountdetails",
   "Account Label": "Konto-Label",
   "Account Settings": "Konten-Einstellungen",
@@ -364,6 +365,7 @@
   "Make sure you have `libsecret` installed and a keyring is present. ": "Stellen Sie sicher, dass `libsecret` installiert ist und ein Schlüsselring vorhanden ist.",
   "Manage": "Verwalten",
   "Manage Accounts": "Konten verwalten",
+  "Manage Contacts": "Kontakte verwalten",
   "Manage Billing": "Bezahlung verwalten",
   "Manage Templates...": "Vorlagen verwalten...",
   "Manually": "Manuell",
@@ -537,6 +539,7 @@
   "Reply Rate": "Antwortquote",
   "Reply to": "Antwort an",
   "Reset": "Zurücksetzen",
+  "Reset Account Color": "Kontofarbe zurücksetzen",
   "Reset Accounts and Settings": "Konten und Einstellungen zurücksetzen",
   "Reset Cache": "Cache zurücksetzen",
   "Reset Configuration": "Konfiguration zurücksetzen",
