Remove all mention of old four account limit.

--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -844,8 +844,7 @@
   "Yahoo is unavailable.": "Yahoo ist nicht verfügbar.",
   "Yes": "Ja",
   "You": "Sie",
-  "You are using %@, which is free! You can link up to four email accounts and try pro features like send later, read receipts and reminders a few times a week.": "Sie benutzen %@, das ist kostenlos! Sie können bis zu vier E-Mail-Konten verknüpfen und Pro-Funktionen, wie z.B. später senden, Lesebestätigungen und Erinnerungen, mehrmals pro Woche ausprobieren.",
-  "You are using %@, which is free! You can link up to four email accounts and try pro features like snooze, send later, read receipts and reminders a few times a week.": "Sie benutzen %@, das ist kostenlos! Sie können bis zu vier E-Mail-Konten verknüpfen und Pro-Funktionen, wie Wiedervorlage, später senden, Lesebestätigungen und Erinnerungen, mehrmals pro Woche ausprobieren.",
+  "You are using %@, which is free! You can try pro features like snooze, send later, read receipts and reminders a few times a week.": "Sie benutzen %@, das ist kostenlos! Sie können Pro-Funktionen wie Snooze ausprobieren, später senden, einige Male pro Woche Belege und Erinnerungen lesen.",
   "You can add reminders to %1$@ emails each %2$@ with Mailspring Basic.": "Sie können mit Mailspring Basic Erinnerungen alle %2$@ zu %1$@ E-Mails hinzufügen.",
   "You can choose a shortcut set to use keyboard shortcuts of familiar email clients. To edit a shortcut, click it in the list below and enter a replacement on the keyboard.": "Sie können eine Verknüpfung auswählen, um Tastaturkürzel bekannter E-Mail-Clients zu verwenden. Um eine Verknüpfung zu bearbeiten, klicken Sie sie in der Liste unten an und geben Sie einen Ersatz auf der Tastatur ein.",
   "You can get open and click notifications for %1$@ emails each %2$@ with Mailspring Basic.": "Sie können mit Mailspring Basic alle %2$@ Öffnungs- und Klickbenachrichtigungen für %1$@ E-Mails benutzen.",
@@ -864,7 +863,7 @@
   "You'll find Mailspring, along with other options, listed in Default Apps > Mail.": "Sie finden Mailspring zusammen mit anderen Optionen unter Standard Apps> Mail.",
   "You're on a pre-release channel. We'd love your feedback.": "Sie sind auf einem Pre-Release-Kanal. Wir würden uns über Ihr Feedback freuen.",
   "You're running the latest version of Mailspring (%@).": "Sie besitzen die neueste Version von Mailspring (%@).",
-  "You're syncing more than four accounts — please consider paying for Mailspring Pro!": "Sie synchronisieren mehr als vier Accounts - überlegen Sie sich bitte, für Mailspring Pro zu bezahlen!",
+  "Please consider paying for Mailspring Pro!": "Überlegen Sie sich bitte, für Mailspring Pro zu bezahlen!",
   "You've reached your quota": "Sie haben Ihr Kontingent erreicht",
   "Your Mailspring ID is missing required fields - you may need to reset Mailspring. %@": "In Ihrer Mailspring-ID sind die erforderlichen Felder nicht vorhanden. Möglicherweise müssen Sie Mailspring zurücksetzen. %@",
   "Your `Sent Mail` folder could not be automatically detected. Visit Preferences > Folders to choose a Sent folder and then try again.": "Ihr Ordner \"Gesendete Nachrichten\" konnte nicht automatisch erkannt werden. Klicken Sie auf Voreinstellungen> Ordner, um einen Ordner Gesendet auszuwählen, und versuchen Sie es erneut.",
