--- a/app/lang/ja.json
+++ b/app/lang/ja.json
@@ -349,7 +349,7 @@
   "Mailspring desktop notifications on Linux require Zenity. You may need to install it with your package manager.": "Linux上のMailspringデスクトップ通知にはZenityが必要です。パッケージマネージャーにインストールする必要があるかもしれません。",
   "Mailspring does not support stylesheets with the extension: %@": "Mailspringは、拡張子が付いたスタイルシートをサポートしていません：%@",
   "Mailspring encountered errors syncing this account. Crash reports have been sent to the Mailspring team and we'll work to fix these errors in the next release.": "Mailspringがこのアカウントを同期する際にエラーが発生しました。クラッシュレポートはMailspringチームに送信されており、次のリリースでこれらのエラーを修正するよう努めます。",
-  "Mailspring is clearing it's cache for %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.": "Mailspringは%@のキャッシュをクリアしています。メールボックスのサイズによっては、数秒または数分かかることがあります。クリーンアップが完了すると、警告が表示されます。",
+  "Mailspring is clearing its cache %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.": "Mailspringは%@のキャッシュをクリアしています。メールボックスのサイズによっては、数秒または数分かかることがあります。クリーンアップが完了すると、警告が表示されます。",
   "Mailspring is independent %@ software, and subscription revenue allows us spend time maintaining and improving the product.": "Mailspringは独立したソフトウェアであり、サブスクリプションの収入は私達が製品を維持し改良するために使用されます。",
   "One or more accounts are having connection issues.": "Mailspringはオフラインです",
   "Mailspring is running in dev mode and may be slower!": "Mailspringは開発者モードで動作しており、速度が遅くなる可能性があります。",
