--- a/app/lang/lo.json
+++ b/app/lang/lo.json
@@ -349,7 +349,7 @@
   "Mailspring desktop notifications on Linux require Zenity. You may need to install it with your package manager.": "Mailspring ການແຈ້ງເຕືອນເດດທັອບໃນ Linux ຕ້ອງການ Zenity. ທ່ານອາດຕ້ອງຕິດຕັ້ງມັນກັບຜູ້ຈັດການຊຸດຂອງທ່ານ.",
   "Mailspring does not support stylesheets with the extension: %@": "Mailspring ບໍ່ສະຫນັບສະຫນູນຄໍເຕົ້າໄຂ່ທີ່ມີການຂະຫຍາຍ: %@",
   "Mailspring encountered errors syncing this account. Crash reports have been sent to the Mailspring team and we'll work to fix these errors in the next release.": "Mailspring ພົບຂໍ້ຜິດພາດທີ່ຊິງຕໍ່ບັນຊີນີ້. ບົດລາຍງານ Crash ໄດ້ຖືກສົ່ງໄປຫາທີມງານ Mailspring ແລະພວກເຮົາຈະເຮັດວຽກເພື່ອແກ້ໄຂຂໍ້ຜິດພາດເຫຼົ່ານີ້ໃນການປ່ອຍຕໍ່ໄປ.",
-  "Mailspring is clearing it's cache for %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.": "Mailspring ກໍາລັງຟາດມັນສໍາລັບ %@. ອີງຕາມຂະຫນາດຂອງກ່ອງຈົດຫມາຍ, ນີ້ອາດໃຊ້ເວລາສອງສາມວິນາທີຫຼືສອງສາມນາທີ. ການແຈ້ງເຕືອນຈະປາກົດໃນເວລາທີ່ເຮັດຄວາມສະອາດແລ້ວ.",
+  "Mailspring is clearing its cache %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.": "Mailspring ກໍາລັງຟາດມັນສໍາລັບ %@. ອີງຕາມຂະຫນາດຂອງກ່ອງຈົດຫມາຍ, ນີ້ອາດໃຊ້ເວລາສອງສາມວິນາທີຫຼືສອງສາມນາທີ. ການແຈ້ງເຕືອນຈະປາກົດໃນເວລາທີ່ເຮັດຄວາມສະອາດແລ້ວ.",
   "Mailspring is independent %@ software, and subscription revenue allows us spend time maintaining and improving the product.": "Mailspring ເປັນເອກະລາດ %@ ຊອບແວ, ແລະລາຍຮັບການເຂົ້າເຖິງອະນຸຍາດໃຫ້ພວກເຮົາໃຊ້ເວລາຮັກສາແລະປັບປຸງຜະລິດຕະພັນ.",
   "One or more accounts are having connection issues.": "One or more accounts are having connection issues.",
   "Mailspring is running in dev mode and may be slower!": "Mailspring ແມ່ນໃຊ້ໃນໂຫມດ dev ແລະອາດຈະຊ້າ!",
