--- a/app/lang/pt-BR.json
+++ b/app/lang/pt-BR.json
@@ -406,7 +406,7 @@
     "O Mailspring não suporta folhas de estilo com a extensão: %@",
   "Mailspring encountered errors syncing this account. Crash reports have been sent to the Mailspring team and we'll work to fix these errors in the next release.":
     "A Mailspring encontrou erros ao sincronizar essa conta. Os relatórios de falhas foram enviados para a equipe do Mailspring e trabalharemos para corrigir esses erros na próxima versão.",
-  "Mailspring is clearing it's cache for %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.":
+  "Mailspring is clearing its cache %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.":
     "O Mailspring está limpando seu cache para %@. Dependendo do tamanho da caixa de correio, isso pode levar alguns segundos ou alguns minutos. Um alerta aparecerá quando a limpeza estiver concluída.",
   "Mailspring is independent %@ software, and subscription revenue allows us spend time maintaining and improving the product.":
     "A Mailspring é um software independente %@, e a receita de assinaturas nos permite gastar tempo mantendo e melhorando o produto.",
