--- a/app/lang/th.json
+++ b/app/lang/th.json
@@ -349,7 +349,7 @@
   "Mailspring desktop notifications on Linux require Zenity. You may need to install it with your package manager.": "การแจ้งเตือน Mailspring บนเดสก์ท็อปบน Linux จำเป็นต้องใช้ Zenity คุณอาจต้องติดตั้งกับผู้จัดการแพคเกจของคุณ",
   "Mailspring does not support stylesheets with the extension: %@": "Mailspring ไม่สนับสนุน stylesheets ที่มีนามสกุล: %@",
   "Mailspring encountered errors syncing this account. Crash reports have been sent to the Mailspring team and we'll work to fix these errors in the next release.": "Mailspring พบข้อผิดพลาดในการซิงค์บัญชีนี้ รายงานข้อขัดข้องถูกส่งไปยังทีม Mailspring และเราจะดำเนินการแก้ไขข้อผิดพลาดเหล่านี้ในรุ่นถัดไป",
-  "Mailspring is clearing it's cache for %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.": "Mailspring กำลังล้างแคชสำหรับ %@ อาจใช้เวลาสองสามวินาทีหรือสองสามนาทีขึ้นอยู่กับขนาดของกล่องจดหมาย การแจ้งเตือนจะปรากฏขึ้นเมื่อการล้างข้อมูลเสร็จสมบูรณ์",
+  "Mailspring is clearing its cache %@. Depending on the size of the mailbox, this may take a few seconds or a few minutes. An alert will appear when cleanup is complete.": "Mailspring กำลังล้างแคชสำหรับ %@ อาจใช้เวลาสองสามวินาทีหรือสองสามนาทีขึ้นอยู่กับขนาดของกล่องจดหมาย การแจ้งเตือนจะปรากฏขึ้นเมื่อการล้างข้อมูลเสร็จสมบูรณ์",
   "Mailspring is independent %@ software, and subscription revenue allows us spend time maintaining and improving the product.": "Mailspring เป็นซอฟต์แวร์อิสระ %@ และรายได้จากการสมัครสมาชิกช่วยให้เราใช้เวลาในการบำรุงรักษาและปรับปรุงผลิตภัณฑ์",
   "One or more accounts are having connection issues.": "Mailspring ออฟไลน์",
   "Mailspring is running in dev mode and may be slower!": "Mailspring กำลังทำงานในโหมด dev และอาจช้ากว่านี้!",
