Add option for vertically stacked reading pane (#2243)
* Add option for vertically stacked reading pane

* Switch from creating a separate column to scoping ThreadList to split+list modes

* Better styling for vertical reading pane

* Fix bug that prevented changing the panel layout via the preferences dialog

* Add resize functionality for vertical thread list

* Add Contact Toolbar button to Thread List Vertical View

* Remove debug log

Co-authored-by: Ben Gotow <ben@foundry376.com>

--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -508,6 +508,8 @@
   "Reading": "Lesen",
   "Reading Pane Off": "Lesefenster aus",
   "Reading Pane On": "Lesefenster ein",
+  "Horizontal Reading Pane": "Horizontales Lesefenster",
+  "Vertical Reading Pane": "Vertikales Lesefenster",
   "Rebuild": "Wiederherstellen",
   "Rebuild Cache...": "Cache neu erstellen...",
   "Recipient": "Empfänger:",
@@ -776,6 +778,7 @@
   "Twitter Handle": "Twitter Handle",
   "Twitter Profile Image": "Twitter Profilbild",
   "Two Panel": "Zwei Panel",
+  "Two Panel Vertical": "Zwei vertikale Panel",
   "Uhoh - that's a pro feature!": "Uhoh - das ist ein Pro-Feature!",
   "Unable to Add Account": "Account kann nicht hinzugefügt werden",
   "Unable to Start Local Server": "Der lokale Server konnte nicht gestartet werden",
