Add send and archive as configuration option to the preferences view (#2295)

--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -166,6 +166,7 @@
   "Default for new messages:": "Standard für neue Nachrichten:",
   "Default for:": "Standard für:",
   "Default reply behavior": "Standardantwortverhalten",
+  "Default send behavior": "Standardsendeverhalten",
   "Delete": "Löschen",
   "Delete Draft": "Entwurf löschen",
   "Delete Template?": "Vorlage löschen?",
@@ -602,6 +603,7 @@
   "Selected Messages": "Nachrichten auswählen",
   "Selection": "Auswahl",
   "Send": "Senden",
+  "Send and Archive": "Senden und Archivieren",
   "Send Anyway": "Trotzdem senden",
   "Send Later": "Später senden",
   "Send message": "E-Mail senden",
