--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -169,6 +169,7 @@
   "Default for new messages:": "Default for new messages:",
   "Default for:": "Default for:",
   "Default reply behavior": "Default reply behavior",
+  "Default send behavior": "Default send behavior",
   "Delete": "Delete",
   "Delete Draft": "Delete Draft",
   "Delete Template?": "Delete Template?",
@@ -610,6 +611,7 @@
   "Selected Messages": "Selected Messages",
   "Selection": "Selection",
   "Send": "Send",
+  "Send and Archive": "Send and Archive",
   "Send Anyway": "Send Anyway",
   "Send Later": "Send Later",
   "Send message": "Send message",
