Improve czech localization

--- a/app/lang/cs.json
+++ b/app/lang/cs.json
@@ -169,7 +169,7 @@
   "Delete Draft": "Odstranit koncept",
   "Delete Template?": "Smazat šablonu?",
   "Delete your custom key bindings and reset to the template defaults?": "Chcete odstranit vlastní klávesovou zkrazku a obnovit výchozí nastavení?",
-  "Deleted": "Smazáno",
+  "Deleted": "Smazanými",
   "Deleting %@": "Mazání %@",
   "Deleting all messages in %@": "Mazání všech zpráv v %@",
   "Deleting draft": "Mazání návrhu",
@@ -295,8 +295,8 @@
   "Insert a link": "Vložte odkaz",
   "Insert content here!": "Vložte obsah zde!",
   "Install": "Instalovat",
-  "Install Theme": "Nainstalujte motiv",
-  "Install a Plugin": "Nainstalujte plugin",
+  "Install Theme": "Nainstalovat motiv",
+  "Install a Plugin": "Nainstalovat plugin",
   "Instantly": "Okamžitě",
   "Invalid plugin location": "Neplatné umístění pluginu",
   "Invalid plugin name": "Neplatné jméno pluginu",
@@ -448,13 +448,13 @@
   "Open": "Otevřít",
   "Open In Browser": "Otevřít v prohlížeči",
   "Open Link": "Otevřít odkaz",
-  "Open Mailsync Logs": "Otevřete protokoly Mailsync",
+  "Open Mailsync Logs": "Otevřít protokoly Mailsync",
   "Open Rate": "Otevřít míru",
   "Open and link tracking": "Sledování otevření a odkazů",
   "Open containing folder after downloading attachment": "Otevřít patřičnou složku po stažení přílohy",
   "Open selected conversation": "Otevřít vybranou konverzaci",
   "Open tracking does not work offline. Please re-enable when you come back online.": "Sledování zobrazení nefunguje offline. Zapněte funkci znovu, až se připojíte k internetu.",
-  "Opened": "Otevřeno",
+  "Opened": "Otevřel/a",
   "Opened by": "Otevřeno",
   "Opens": "Zobrazení",
   "Or, 'next Monday at 2PM'": "Nebo \"příští pondělí ve 2\"",
@@ -640,8 +640,8 @@
   "Show notifications for new unread messages": "Zobrazit oznámení o nových nepřečtených zprávách",
   "Show notifications for repeated opens / clicks": "Zobrazit oznámení o opakovaných otevíráních / kliknutích",
   "Show unread counts for all folders / labels": "Zobrazit nepřečtené počty všech složek nebo štítků",
-  "Showing %@ threads with %@ messages": "Zobrazení %@ vláken s %@ zprávami",
-  "Showing 1 thread with %@ messages": "Zobrazení 1 vlákna s %@ zprávami",
+  "Showing %@ threads with %@ messages": "Zobrazeno %@ vláken se %@ zprávami",
+  "Showing 1 thread with %@ messages": "Zobrazeno 1 vlákno se %@ zprávami",
   "Sign Out": "Odhlásit se",
   "Sign in with %@ in %@ your browser.": "Přihlaste se pomocí %@ do prohlížeče %@.",
   "Signatures": "Podpisy",
@@ -868,7 +868,7 @@
   "Your `Trash` folder could not be automatically detected. Visit Preferences > Folders to choose a Trash folder and then try again.": "Váš adresář `Koš` nebyl automaticky rozpoznán. Přejděte do Předvolby > Složky a vyberte složku `Koš` a zkuste to znovu.",
   "Your name": "Vaše jméno",
   "Your updated localization will be reviewed and included in a future version of Mailspring.": "Aktualizovaná lokalizace bude přezkoumána a zahrnutá do budoucí verze Mailspringu.",
-  "Zoom": "Přiblížení",
+  "Zoom": "Maximalizovat",
   "an email address": "e-mailovou adresu",
   "an email subject": "předmět e-mailu",
   "and": "a",
