--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -171,7 +171,7 @@
   "Delete Draft": "Entwurf löschen",
   "Delete Template?": "Vorlage löschen?",
   "Delete your custom key bindings and reset to the template defaults?": "Benutzerdefinierte Tastenbelegungen löschen und auf die Standardwerte zurücksetzen?",
-  "Deleted": "Gelöscht",
+  "Deleted": "Gelöschten",
   "Deleting %@": "Lösche %@",
   "Deleting all messages in %@": "Lösche alle Nachrichten in %@",
   "Deleting draft": "Lösche Entwurf",
